--- a/site/views/index.ejs
+++ b/site/views/index.ejs
@@ -364,6 +364,7 @@
         <script src="/javascripts/carousel.js"></script>
         <script src="/javascripts/carusel2.js"></script>
         <script src="/javascripts/modal.js"></script>
+        <script src="/javascripts/searchIndex.js"></script>
   </body>
 
 </html>
