--- a/site/views/partials/header.ejs
+++ b/site/views/partials/header.ejs
@@ -1,5 +1,6 @@
 <!-- HEADER -->
 <header>
+  
     <div class=".header-container">
       <div class="col-12 container-logo">
         <a href="/"><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -64,7 +65,7 @@
             </div>
             <li><a href="">Vinos Tintos</a></li>
             <li><a href="">Vinos Blancos</a></li>
-            <li><a href="">Nosotros</a></li>
+            <li><a href="/creadores">Nosotros</a></li>
             <li><a href="">Contacto</a></li>
 
 
@@ -78,7 +79,7 @@
             </div>
             <div class="icons-nav2">
               <li><a href="/ingreso"><i class="far fa-user"></i></a></li>
-              <li><a href=""><i class="fas fa-search"></i></a></li>
+              <li><a href="#" class="search-index-action"><i class="fas fa-search"></i></a></li>
               <li><a href=""><i class="fas fa-shopping-cart"></i></a></li>
             </div>
           </ul>
@@ -86,4 +87,14 @@
       </nav>
     </div>
     </div>
+
+    
+      <!--BUSCADOR-->
+      <div class="search-index">
+        <div class="buscador-index"><form action="/search" method="GET"><div class="wrapper2">
+          <input type="text" name= "search" class="input" 
+          placeholder="Ingrese nombre del producto">
+          <button type="submit" class="searchbtn2"><i class="fa fa-search"></i></button>
+        </form></div>
+        </div>
   </header>
