--- a/site/views/partials/header.ejs
+++ b/site/views/partials/header.ejs
@@ -66,7 +66,7 @@
             <li><a href="">Vinos Tintos</a></li>
             <li><a href="">Vinos Blancos</a></li>
             <li><a href="/creadores">Nosotros</a></li>
-            <li><a href="">Contacto</a></li>
+            <li><a href="/pages/contacto">Contacto</a></li>
 
 
           </ul>
